--- a/resources/assets/sass/components/MediaQueries.scss
+++ b/resources/assets/sass/components/MediaQueries.scss
@@ -31,6 +31,7 @@
 		.cd-filters {
 			width: 100%;
 			flex-direction: column;
+			margin-top: -30px;
 		}
 	}
 
